[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/Run0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/Run1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/Run2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Run3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Run4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Run7.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Idle0.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/Jump1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/Jump3.png" type="Texture" id=10]
[ext_resource path="res://Fonts/Ninja Note.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Sprites/Tiles/Sky.png" type="Texture" id=12]
[ext_resource path="res://sfx/theernu.wav" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 12.0
height = 32.0

[sub_resource type="DynamicFont" id=3]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 11 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 11 )
_sections_unfolded = [ "Font" ]

[node name="Player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 5 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="." index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.56, 0.56 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Smoothing" ]

[node name="PauseMenu" type="VBoxContainer" parent="." index="3"]

pause_mode = 2
editor/display_folded = true
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 274.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Pause" ]

[node name="Label" type="Label" parent="PauseMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 274.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.636719, 0.0397949, 0.0397949, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "PAUSED"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Button" type="Button" parent="PauseMenu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 46.0
margin_right = 274.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.628906, 0.0958099, 0.0958099, 1 )
custom_colors/font_color = Color( 0.803654, 0.847656, 0.043045, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.787124, 0.847656, 0.0728455, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "RESUME"
flat = false
align = 1
_sections_unfolded = [ "custom_colors" ]

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="4"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

motion_scale = Vector2( 0.1, 0.1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 640, 640 )
_sections_unfolded = [ "Motion" ]

[node name="Sky" type="Sprite" parent="ParallaxBackground" index="1"]

scale = Vector2( 1.98794, 1.12937 )
texture = ExtResource( 12 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="DeathRay" type="RayCast2D" parent="." index="5"]

enabled = false
exclude_parent = true
cast_to = Vector2( 0, 32 )
collision_mask = 1

[node name="Timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Position2D" type="Position2D" parent="." index="7"]

position = Vector2( 10.358, 4.72512 )
scale = Vector2( 0.865384, 0.789768 )

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="." index="8"]

stream = ExtResource( 13 )
volume_db = 20.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="pressed" from="PauseMenu/Button" to="." method="_on_Button_pressed"]


